# XR-Robot-Teleop-Server

./: .gitattributes  .gitmodules  LLM_NOTES.md  NOTES.md  README.md  pyproject.toml
.github/workflows/: python-package.yml
examples/: 360_server_unity.py  dextrous_hand_control.py  pose_transformations.py  record_body_pose.py  record_full_body_pose.py  visualize_body_pose.py  visualize_bone_frames.py
misc/: blender_export_script.py  convert_fbx_to_openxr_recording.py  convert_openxr_to_lafan_bvh.py  convert_vmd_to_openxr_recording.py  dextrous_hand_control_fbx.py  dextrous_hand_control_vmd.py  rokoko_pose_data_DancingMedium.csv  rokoko_pose_data_DoTheRobot.csv  visualize_fbx_body_pose.py  visualize_fbx_bone_frames.py  visualize_kinematic_tree.py  visualize_openxr_body_pose.py  visualize_vmd_body_pose.py  visualize_vmd_bone_frames.py  vmd_pose_data_golden_smooth.csv  vmd_pose_data_golden_smooth_upperbody.csv  vmd_pose_data_openxr_golden_smooth_mpconv.csv  vmd_pose_data_openxr_golden_smooth_rootconv.csv
misc/assets/: data_fbx_rokoko_DancingMedium.rrd  data_vmd_golden_smooth.rrd
python/: pyproject.toml
python/src/xr_robot_teleop_server/: cli.py
python/src/xr_robot_teleop_server/transforms/: equilib_transforms.py
recordings/: sample_body_pose_data.csv  sample_body_pose_data.jsonl
scripts/: apply_pose_offset.py
src/xr_robot_teleop_server/: __about__.py  __init__.py  logging.py
src/xr_robot_teleop_server/schemas/: body_pose.py  openxr_skeletons.py  ovr_skeletons.py
src/xr_robot_teleop_server/sources/: ffmpeg_source.py  opencv_source.py
src/xr_robot_teleop_server/streaming/: webrtc_server.py
src/xr_robot_teleop_server/utils/: codecs.py  coordinate.py  frame.py
temp/: load_hand.py
tests/: test_smoke.py
